--- a/public/colophon.html
+++ b/public/colophon.html
@@ -24,13 +24,13 @@
   </div>
 
   <div id="colophon">
-    3D Tic Tac Toe was created by <a href="http://www.violetcraze.net/">Violet Graham</a>. Inspired in part by the game of the same name for the Atari 2600.
+    3D Tic Tac Toe was created by <a href="http://www.violetcraze.net/">Dusk Virkus</a>. Inspired in part by the game of the same name for the Atari 2600.
     <br>
     <br>
     The game was coded in JavaScript using <a href="https://code.visualstudio.com/">Visual Studio Code</a>. It uses <a href="https://p5js.org/">p5.js</a> a graphics library and <a href="https://github.com/bohnacker/p5js-screenPosition">addScreenPositionFunction library</a>. Some of the graphics including the logo were created using <a href="https://www.blender.org/">Blender</a>, <a href="https://www.adobe.com/products/illustrator.html">Adobe Illustrator</a>, and <a href="https://www.adobe.com/products/photoshop.html">Photoshop</a>.
     <br>
     <br>
-    The project's source code is available on GitHub at <a href="https://github.com/violetcraze/3D-tic-tac-toe">github.com/violetcraze/3D-tic-tac-toe</a>. If you'd like to donate to help cover the maintenance costs of this site you can do so at <a href="https://ko-fi.com/violetcraze">ko-fi.com/violetcraze</a>.
+    The project's source code is available on GitHub at <a href="https://github.com/duskvirkus/3D-tic-tac-toe">github.com/duskvirkus/3D-tic-tac-toe</a>.
   </div>
 
 </body>
