--- a/public/colophon.html
+++ b/public/colophon.html
@@ -24,7 +24,7 @@
   </div>
 
   <div id="colophon">
-    3D Tic Tac Toe was created by <a href="http://www.violetcraze.net/">Dusk Virkus</a>. Inspired in part by the game of the same name for the Atari 2600.
+    3D Tic Tac Toe was created by <a href="http://www.duskvirkus.com/">Dusk Virkus</a>. Inspired in part by the game of the same name for the Atari 2600.
     <br>
     <br>
     The game was coded in JavaScript using <a href="https://code.visualstudio.com/">Visual Studio Code</a>. It uses <a href="https://p5js.org/">p5.js</a> a graphics library and <a href="https://github.com/bohnacker/p5js-screenPosition">addScreenPositionFunction library</a>. Some of the graphics including the logo were created using <a href="https://www.blender.org/">Blender</a>, <a href="https://www.adobe.com/products/illustrator.html">Adobe Illustrator</a>, and <a href="https://www.adobe.com/products/photoshop.html">Photoshop</a>.
